--- a/CreatingClassesLab/CreatingClassesLab.csproj
+++ b/CreatingClassesLab/CreatingClassesLab.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Person.cs" />
+    <Compile Include="Classes\PersonManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
